--- a/__demo/helpers/vaadin-demo-code-snippet.css
+++ b/__demo/helpers/vaadin-demo-code-snippet.css
@@ -1,6 +1,14 @@
 :host {
   display: block;
-  height: 20rem;
+  max-height: 20rem;
   overflow-y: auto;
   padding: 0.5rem 1rem;
+}
+
+:host([theme~='dark']) {
+  @nested-import 'highlight.js/styles/atom-one-dark.css';
+}
+
+:host([theme~='light']) {
+  @nested-import 'highlight.js/styles/vs.css';
 }
