--- a/__demo/helpers/vaadin-demo-code-snippet-file.css
+++ b/__demo/helpers/vaadin-demo-code-snippet-file.css
@@ -1,7 +1,6 @@
 header {
   padding: 0.3rem 0.3rem;
   font-size: 0.8rem;
-  
 }
 
 pre {
@@ -13,16 +12,12 @@ pre {
 
 :host([theme~='dark']) {
   @nested-import 'highlight.js/styles/atom-one-dark.css';
-
-  pre {
-    background: #2b2b2b;
-  }
 }
 
 :host([theme~='light']) {
   @nested-import 'highlight.js/styles/vs.css';
+}
 
-  pre {
-    background: #fbebd4;
-  }
+pre {
+  background: var(--code-background);
 }
