--- a/__demo/helpers/vaadin-demo-layout.css
+++ b/__demo/helpers/vaadin-demo-layout.css
@@ -1,3 +1,13 @@
+@media (max-width: 767px) {
+  main {
+    padding: 0;
+  }
+}
+
+main {
+  padding: 0 20%;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
