docs: remove all Polymer mentions

--- a/__demo/@helpers/vaadin-demo-code-snippet-file.css
+++ b/__demo/@helpers/vaadin-demo-code-snippet-file.css
@@ -4,6 +4,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background: var(--code-file-background);
 }
 
 section {
