--- a/__demo/@helpers/vaadin-demo-layout.css
+++ b/__demo/@helpers/vaadin-demo-layout.css
@@ -1,3 +1,20 @@
+:host {
+  --code-background-light: hsl(35, 83%, 91%);
+  --code-file-background-light: hsl(35, 83%, 85%);
+  --code-background-dark: hsl(0, 0%, 17%);
+  --code-file-background-dark: hsl(0, 0%, 23%);
+}
+
+:host([theme~='dark']) {
+  --code-background: var(--code-background-dark);
+  --code-file-background: var(--code-file-background-dark);
+}
+
+:host([theme~='light']) {
+  --code-background: var(--code-background-light);
+  --code-file-background: var(--code-file-background-light);
+}
+
 @media (max-width: 767px) {
   main {
     padding: 0;
